# searxng-mcp

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
.claude/: settings.json
src/searxng_mcp/: __init__.py  __main__.py  config.py  http_server.py  logging.py  metrics.py  server.py
src/searxng_mcp/hints/: __init__.py  rules.yaml
src/searxng_mcp/tools/: __init__.py  image_search.py  news_search.py  searxng_client.py  web_search.py
systemd/: searxng-mcp.service
tests/: conftest.py
tests/fixtures/: searxng.py
tests/unit/: test_hints_rules_yaml.py  test_image_search.py  test_news_search.py  test_searxng_client.py  test_web_search.py
