[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "searxng-mcp"
version = "0.1.0"
description = "MCP Server for SearXNG web search"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
searxng-mcp = "searxng_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/searxng_mcp"]
