[project]
name = "searxng-mcp"
version = "0.4.0"
description = "MCP Server for SearXNG meta-search — web, image, news search"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "klapom" }]

dependencies = [
    # MCP SDK (FastMCP)
    "mcp[cli]>=1.3.0",
    # HTTP surfaces
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Config + validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    # Logging + metrics
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    # HTTP client
    "httpx>=0.28.0",
]

[project.scripts]
searxng-mcp = "searxng_mcp.__main__:main_stdio"
searxng-mcp-http = "searxng_mcp.http_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.22.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/searxng_mcp"]

# ─── ruff ────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

# ─── mypy ────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ─── pytest ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=searxng_mcp.tools",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.coverage.run]
branch = true
source = ["src/searxng_mcp/tools"]

[tool.coverage.report]
show_missing = true
skip_covered = false
