[project]
name = "searxng-mcp"
version = "0.5.0"
description = "MCP Server for SearXNG meta-search — web, image, news search"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "klapom" }]

dependencies = [
    # Shared runtime (logging, metrics, dual-surface HTTP, stdio, BaseServiceSettings)
    "mcp-toolkit-py @ git+https://github.com/klapom/mcp-toolkit-py@v0.1.0",
    # MCP SDK (FastMCP) — kept explicit for IDE/type resolution even though toolkit requires it
    "mcp[cli]>=1.3.0",
    # Service-specific
    "httpx>=0.28.0",
]

[project.scripts]
searxng-mcp = "searxng_mcp.__main__:main_stdio"
searxng-mcp-http = "searxng_mcp.http_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.22.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/searxng_mcp"]

# ─── ruff ────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

# ─── mypy ────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ─── pytest ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=searxng_mcp.tools",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.coverage.run]
branch = true
source = ["src/searxng_mcp/tools"]

[tool.coverage.report]
show_missing = true
skip_covered = false
